--- a/css/main.css
+++ b/css/main.css
@@ -1066,10 +1066,13 @@ color: #fff;
     border-radius: 8px;
 
 }
+.mobil-nav i{
+    margin-left: 10px;
+}
  .mobil-nav{
     position: relative;
     top: 30px;
-    left: 12px;
+    /* left: 12px; */
  }
 
 
@@ -1077,7 +1080,8 @@ color: #fff;
 
  @media (max-width: 560px) {
     .mobil-home{
-      margin: 0 20px;
+        width: 100%;
+      margin: 0 0px;
       display: block;
     }
 }
